# fastapi-audit

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: publish.yml
audit/: __init__.py  config.py  helpers.py  jwt_parser.py  middleware.py  models.py  orm_listener.py  sanitizer.py  writer.py
audit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fastapi_audit/: __init__.py  config.py  helpers.py  jwt_parser.py  middleware.py  models.py  orm_listener.py  sanitizer.py  writer.py
migrations/versions/: 001_create_audit_logs.py
tests/: __init__.py  test_actor_aliases.py  test_config.py  test_create_tables.py  test_helpers.py  test_imports.py  test_jwt_parser.py  test_middleware.py  test_orm_listener.py  test_sanitizer.py
